# YadroTestResampling

./: .gitignore  CMakeLists.txt  README.md
include/: dsp.h  pipeline.h  utils.h
src/: dsp.c  main.c  pipeline.c  utils.c
tests/: test_decimate_2x.c  test_error_calculation.c  test_interpolate_2x.c  test_pipeline.c  test_sine_generator.c  tests.c  tests.h
